[gd_scene load_steps=10 format=3 uid="uid://drd0oe7harkkc"]

[ext_resource type="Script" path="res://game_scene/game_scene.gd" id="1_1mwb5"]
[ext_resource type="LabelSettings" uid="uid://bc6hskujp8cbx" path="res://assets/GM_32_Dark.tres" id="1_6arlq"]
[ext_resource type="Texture2D" uid="uid://dncdslecy1gnc" path="res://assets/ui/blue_button00.png" id="2_a864n"]
[ext_resource type="PackedScene" uid="uid://bq44mxljwxrgs" path="res://memory_tile/memory_tile.tscn" id="2_hgqha"]
[ext_resource type="Texture2D" uid="uid://b84mhuoom8xbq" path="res://assets/ui/yellow_button00.png" id="3_e3hv0"]
[ext_resource type="Texture2D" uid="uid://bbpxgmmbkv0r5" path="res://assets/ui/green_button00.png" id="4_s8b17"]
[ext_resource type="LabelSettings" uid="uid://3sfcn0o8g6q1" path="res://assets/GM_32_White.tres" id="5_6ygx5"]
[ext_resource type="PackedScene" uid="uid://br30pexc2xcqv" path="res://scorer/scorer.tscn" id="8_iwbxq"]
[ext_resource type="PackedScene" uid="uid://d2nrdkhkxtdqp" path="res://game_over/game_over.tscn" id="9_jdr4w"]

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mwb5")
mem_tile_scene = ExtResource("2_hgqha")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC1" type="MarginContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HB/MC1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MC2" type="MarginContainer" parent="HB"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_right = 18

[node name="VB" type="VBoxContainer" parent="HB/MC2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HB" type="HBoxContainer" parent="HB/MC2/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("1_6arlq")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="HB/MC2/VB/HB"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_6arlq")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HB2" type="HBoxContainer" parent="HB/MC2/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("1_6arlq")
vertical_alignment = 1

[node name="PairsLabel" type="Label" parent="HB/MC2/VB/HB2"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_6arlq")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer" type="Control" parent="HB/MC2/VB"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HB/MC2/VB"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_a864n")
texture_pressed = ExtResource("3_e3hv0")
texture_hover = ExtResource("4_s8b17")

[node name="Label" type="Label" parent="HB/MC2/VB/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("5_6ygx5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="Scorer" parent="." instance=ExtResource("8_iwbxq")]

[node name="GameOver" parent="." instance=ExtResource("9_jdr4w")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HB/MC2/VB/ExitButton" to="." method="_on_exit_button_pressed"]
